--- a/CNQAOS/web/cnqaos_admin.html
+++ b/CNQAOS/web/cnqaos_admin.html
@@ -14,6 +14,7 @@ and open the template in the editor.
 	  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 	  <!-- SPELLS -->
 	  <!-- load angular via CDN -->
+          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"></script> 
          <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
