--- a/CNQAOS/web/cnqaos_admin.html
+++ b/CNQAOS/web/cnqaos_admin.html
@@ -8,55 +8,79 @@ and open the template in the editor.
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-          <!-- SCROLLS -->
-	  <!-- load bootstrap and fontawesome via CDN -->
-	  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-	  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-	  <!-- SPELLS -->
-	  <!-- load angular via CDN -->
-          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
-          <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"></script> 
-         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-          <script src="resources/js/admin/admin.js" type="text/javascript"></script>
-          <script src="resources/js/center/center.js" type="text/javascript"></script>
-          <script src="resources/js/student/student.js" type="text/javascript"></script>
-          <script src="resources/js/teacher/teacher.js" type="text/javascript"></script>
-          <script src="resources/js/training/training.js" type="text/javascript"></script>
-          <script src="resources/js/subject/subject.js" type="text/javascript"></script>
+        <!-- SCROLLS -->
+        <!-- load bootstrap and fontawesome via CDN -->
+        <!--	  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+                  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />-->
+        <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
+        <!-- SPELLS -->
+        <!-- load angular via CDN -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.js"></script> 
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
+        <script src="resources/js/admin/admin.js" type="text/javascript"></script>
+        <script src="resources/js/center/center.js" type="text/javascript"></script>
+        <script src="resources/js/student/student.js" type="text/javascript"></script>
+        <script src="resources/js/teacher/teacher.js" type="text/javascript"></script>
+        <script src="resources/js/training/training.js" type="text/javascript"></script>
+        <script src="resources/js/subject/subject.js" type="text/javascript"></script>
+<!--        <script src="resources/js/newsletter/newsletter.js" type="text/javascript"></script>-->
+        <script src="resources/js/admin/route.js" type="text/javascript"></script>
     </head>
     <body>
-		<!-- HEADER AND NAVBAR -->
-		<header>
-			<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="/">CNQAOS</a>
-				</div>
-
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="fa fa-home"></i> Center</a></li>
-					<li><a href="#student"><i class="fa fa-shield"></i> Student</a></li>
-					<li><a href="#teacher"><i class="fa fa-shield"></i> Teacher</a></li>
-                                        <li><a href="#training"><i class="fa fa-shield"></i> Training</a></li>
-                                        <li><a href="#subject"><i class="fa fa-shield"></i> Subject</a></li>
-<!--                                        <li><a href="#teacher_sub"><i class="fa fa-shield"></i> Teacher-Subject</a></li>
-                                        <li><a href="#taining_center"><i class="fa fa-shield"></i> Training-Center</a></li>-->
-				</ul>
-			</div>
-			</nav>
-		</header>
-		<!-- MAIN CONTENT AND INJECTED VIEWS -->
-		<div id="main">
-
+        <div id="main">
+            <div id="top-container">
+                <div class="logo"><img alt="" src="resources/images/logo.jpg" /></div>
+                <div class="navigation">
+                    <div class="home-icon"><a href="#"><img alt="" src="resources/images/home-icon.gif" /></a></div>
+                    <div class="navigation-link">
+                        <ul>
+                            <li><a href="#">Center</a></li>
+                            <li><a href="#student">Student</a></li>
+                            <li><a href="#teacher">Teacher</a></li>
+                            <li><a href="#subject">Subject</a></li>
+                            <li><a href="#training">Training</a></li>
+<!--                            <li><a href="#newsletter">Newsletter</a></li>-->
+                        </ul>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
                     <!-- angular templating -->
                     <!-- this is where content will be injected -->
                     <div data-ng-view></div>
-
-		</div>
-		<!-- FOOTER -->
-		<footer class="text-center">
-                    <h1>CNQAOS</h1>
-		</footer>
+    <div id="bott-container">
+    	<div class="bottlink-part">
+            <div class="bottleft"><a href="#" class="facebooklink"><img class="valignmidd" alt="" src="resources/images/facebook-icon.gif" />&nbsp; Suivez nous sur facebook!</a></div>
+            <div class="bottright">
+            	<div class="fright">
+                <div class="bottlink-block">
+                <ul>
+                <li><a href="#">Informations légales</a></li>
+                <li><a href="#">Plan du site</a></li>
+                <li><a href="#">Edam</a></li>
+                <li><a href="#">Emmental</a></li>
+                </ul>
+                </div>
+                
+                <div class="bottlink-block">
+                <ul>
+                <li><a href="#">Mascarpone</a></li>
+                <li><a href="#">Ricotta</a></li>
+                <li><a href="#">Mozarella</a></li>
+                <li><a href="#">babybel</a></li>
+                </ul>
+                </div>
+                <div class="clear"></div>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="copyright">Copyright &copy; 2014 CNQAOS tous droits réservés</div>
+    </div>
+        </div>
     </body>
 </html>
